--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "router": "^1.3.5",
     "scss": "^0.2.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
