--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.2",
+    "moment": "^2.29.1",
     "particles.js": "^2.0.0",
     "router": "^1.3.5",
     "scss": "^0.2.4",
